fix: set main height to prevent logo pixel shift

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ main {
   top: 50%;
   left: 0;
   width: 100%;
+  height: 80px;
   transform: translateY(-50%);
   display: flex;
   justify-content: center;
